# src/main/java/com/challenge/account/service/dto/CustomerPersonResponse.java
@@ -1,0 +1,28 @@
+package com.challenge.account.service.dto;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.experimental.FieldDefaults;
+
+import static lombok.AccessLevel.PRIVATE;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@FieldDefaults(level = PRIVATE)
+@JsonIgnoreProperties(ignoreUnknown = true)
+public class CustomerPersonResponse {
+
+    String person_id;
+    Boolean status;
+    String name;
+    String gender;
+    String age;
+    String identification;
+    String address;
+    String phone;
+}
